styles/pricing.scss
.pricing {
  background: $bg-dark-primary;
  margin: 4rem 0;
  .pricing_background_elements {
    position: absolute;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    opacity: 1;
    z-index: 1;
    .logo {
        bottom: 20%;
      position: absolute;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;

      z-index: 0;
width: 600px;
height: 400px;
      img {
        width: 100%;
        height: 100%;
        object-fit: contain;
      }
    }
    .left-circles {
      left: -10%;
      top: 10%;
      position: absolute;
      height: 500px;
      width: 500px;
      z-index: -1;
      position: absolute;
      border-radius: 50%;
      border: 1px solid #f0f0f0;
      animation: slideUpDown 4s infinite linear;
      &::after {
        content: "";
        left: -10%;
        top: 50%;
        position: absolute;
        height: 500px;
        width: 500px;
        z-index: -1;
        position: absolute;
        border-radius: 50%;
        border: 1px solid #f0f0f0;
        animation: slideUpDown 4s infinite linear;
      }
      @keyframes slideUpDown {
        0% {
          -webkit-transform: translate(0px, 0px);
          transform: translate(0px, 0px);
        }
        50% {
          -webkit-transform: translateY(-20px);
          transform: translateY(-20px);
        }
        100% {
          -webkit-transform: translate(0px, 0px);
          transform: translate(0px, 0px);
        }
      }
    }
  }
  .right-circles {
    right: -10%;
    top: 10%;
    position: absolute;
    height: 500px;
    width: 500px;
    z-index: -1;
    position: absolute;
    border-radius: 50%;
    border: 1px solid #f0f0f0;
    animation: slideUpDown 4s infinite linear;
    &::after {
      content: "";
      left: -10%;
      top: 50%;
      position: absolute;
      height: 500px;
      width: 500px;
      z-index: -1;
      position: absolute;
      border-radius: 50%;
      border: 1px solid #f0f0f0;
      animation: slideUpDown 4s infinite linear;
    }
    @keyframes slideUpDown {
      0% {
        -webkit-transform: translate(0px, 0px);
        transform: translate(0px, 0px);
      }
      50% {
        -webkit-transform: translateY(-20px);
        transform: translateY(-20px);
      }
      100% {
        -webkit-transform: translate(0px, 0px);
        transform: translate(0px, 0px);
      }
    }
  }
  .pricing_container {
    color: $white;
    padding: 5rem 0;
    z-index: 10 !important;
    margin: 0 3rem;
    .header {
      text-align: center;

      h1 {
        font-weight: 700;
      }
      p {
        text-transform: capitalize;
        font-size: 1.2rem;
        color: $light-gray;
      }
    }
    .pricing_list {
      margin-top: 3rem;
        display: grid;
      gap: 2rem;

        justify-content: center;

        grid-template-columns: 1fr 1fr 1fr 1fr ;
        grid-auto-rows: min-content;
    
      .pricing_item {


        z-index: 1;
        padding: 40px;
        height: fit-content;
        overflow: hidden;
        background: $white;
        color: $gray;
        border-radius: 7px;
        position: relative;
        margin-bottom: 30px;
        .pricing_item_title {
          font-weight: 600;    z-index: 10;
          color: $primary;
        }
        .pricing_item_price {
          font-weight: 600;
          color: $dark;
        }
        .pricing_item_description {
          margin: 1rem 0;
          font-size: 0.9rem;    z-index: 10;
        }
        .pricing__rows {
          .pricing_row {
            display: flex;
            align-items: center;
            margin: 1rem 0;
            h6 {
              margin-left: 0.5rem;
              margin-bottom: 0;
            }
          }
        }
      }
    }
  }
}
/* ... */

